--- a/locales/en.json
+++ b/locales/en.json
@@ -240,6 +240,7 @@
       "optional": "Add or remove optional layers",
       "optional-layers": "More",
       "overlay-opacity": "Overlay transparency",
+      "overlay-opacity_plural": "Overlays transparency",
       "table": {
         "URL": "URL",
         "empty": "No custom layer configured yet.",
