--- a/locales/en.json
+++ b/locales/en.json
@@ -246,7 +246,9 @@
         "URL": "URL",
         "empty": "No custom layer configured yet.",
         "name": "Name",
-        "type": "Type"
+        "type": "Type",
+        "type_layer": "Layer",
+        "type_overlay": "Overlay"
       },
       "title": "Layers",
       "tooltip": "Select layers"
