--- a/locales/en.json
+++ b/locales/en.json
@@ -157,7 +157,8 @@
     "zoomOutTitle": "Zoom out"
   },
   "modal": {
-    "close": "Close"
+    "close": "Close",
+    "or": ""
   },
   "navbar": {
     "about": "About",
