Add translation for "overpass" layer category

--- a/locales/en.json
+++ b/locales/en.json
@@ -237,6 +237,7 @@
         "europe": "Europe",
         "europe-monolingual": "Europe monolingual",
         "overlays": "Overlays",
+        "overpass": "Locations (POIs)",
         "worldwide": "Worldwide",
         "worldwide-international": "Worldwide international",
         "worldwide-monolingual": "Worldwide monolingual"
