change keyboard shortcuts; update tooltips
- "Load Track as Route" is now triggered by pressing `Shift-O`
- "Load No-Go-Areas" is now triggered by pressing `Shift-N`
- tooltip for navbar link is updated an ready for translation

--- a/locales/en.json
+++ b/locales/en.json
@@ -174,8 +174,9 @@
     "load": {
       "nogos": "Load no-go areas",
       "title": "Load",
-      "tooltip": "{{tracksAction}} ({{tracksKey}} key)\n{{nogosAction}} ({{nogosKey}})",
-      "tracks": "Load tracks"
+      "tooltip": "{{tracksAction}} ({{tracksKey}} key)\n{{trackAsRouteAction}} ({{trackAsRouteKey}})\n{{nogosAction}} ({{nogosKey}})",
+      "tracks": "Load tracks",
+      "trackAsRoute": "Load Track as Route"
     },
     "profile": {
       "car-eco": "Car (economic)",
